# SummrMc

./: .gitignore  Dockerfile.summermc  docker-compose.summermc.yml
SummerMC/: .gitignore  README.md  build.sh
SummerMC/src/main/java/com/summermc/: Benchmark.java  SummerMC.java
mc-optimizer/: Cargo.toml  Dockerfile  Makefile
mc-optimizer/docker/: docker-compose.yml  entrypoint.sh
mc-optimizer/launcher/src/com/mcopt/: ServerLauncher.java
mc-optimizer/maven-agent/: pom.xml
mc-optimizer/maven-agent/src/main/java/com/mcopt/: BytecodeOptimizer.java  FoliaPlugin.java  FoliaRegionWatcher.java  FoliaTuningProfile.java  GCMonitor.java  JVMOptimizer.java  LowLevelTuner.java  McOptCommand.java  McOptJavaAgent.java  McOptPlugin.java  NativeBridge.java  NativeLoader.java  Profile.java
mc-optimizer/maven-agent/src/main/resources/: config.yml  plugin.yml
mc-optimizer/pterodactyl/: README.md  egg-mcopt-unified.json
mc-optimizer/shell/: launch.sh  setup-host.sh  setup-hugepages.sh
mc-optimizer/src/: lib.rs  main.rs
